Upgrade to hazelcast 5.2, tomcat 10 & jakarta persistence & jdk17